--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
-spring.application.name=spring-boot-docker-app1
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/assignment-db
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+spring.jpa.hibernate.show-sql=true
+
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.initialization-mode=always 
