--- a/.github/workflows/ci-workflow.yaml
+++ b/.github/workflows/ci-workflow.yaml
@@ -1,17 +1,18 @@
 name: CI Pipeline (DOC1)
 
 on:
-  workflow_dispatch:
   push:
     branches:
-      - [ main ]
+      - main
+  workflow_dispatch:
 
 jobs:
   build:
     name: My First Pipeline
     runs-on: ubuntu-latest
-
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
       - name: Run a one-line script
-        run: echo "Continuous Integration" 
+        run: echo "Continuous Integration"
