--- a/.github/ci-test_and_build.yml
+++ b/.github/ci-test_and_build.yml
@@ -28,24 +28,39 @@ jobs:
       - name: Run Tests
         run: mvn -B test
 
-# Build jobs
   build: 
-    # depends on test's job
     needs: tests
-    name: Build
-    #Run on Ubuntu using the latest version
+    name: Build and Publish
     runs-on: ubuntu-latest
+
     steps:
-      #Check-out your repository
+      # Check out your repository
       - uses: actions/checkout@v4
-      #Set up JDK 21
+
+      # Set up JDK 21
       - name: Set up JDK 21
         uses: actions/setup-java@v4
         with:
           distribution: 'temurin'
           java-version: '21'
-            
-        # Build the application using Maven
+
+      # Build the application using Maven
       - name: Build with Maven
         run: mvn -B package -DskipTests --file pom.xml
+
       - run: mkdir staging && cp target/*.jar staging
+
+      # Login to Docker Hub
+      - name: Login to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      # Build Docker image
+      - name: Build Docker image
+        run: docker build -t ${{ secrets.DOCKER_USERNAME }}/my-app:latest .
+
+      # Push Docker image to Docker Hub
+      - name: Push Docker image
+        run: docker push ${{ secrets.DOCKER_USERNAME }}/my-app:latest
