--- a/.github/ci-test_and_build.yml
+++ b/.github/ci-test_and_build.yml
@@ -48,6 +48,7 @@ jobs:
       - name: Build with Maven
         run: mvn -B package -DskipTests --file pom.xml
 
+      # Copy the JAR file to staging directory
       - run: mkdir staging && cp target/*.jar staging
 
       # Login to Docker Hub
