--- a/.github/workflows/ci-test-and-build.yml
+++ b/.github/workflows/ci-test-and-build.yml
@@ -6,11 +6,12 @@ on:
 
   # Trigger the workflow on push to the main branch
   push:
-    branches: [ main ]
+    branches:
+      - main
 
 jobs:
   tests:
-    name: Unit tests
+    name: Unit Tests
     runs-on: ubuntu-latest
 
     steps:
@@ -28,9 +29,9 @@ jobs:
       - name: Run Tests
         run: mvn -B test
 
-  build: 
-    needs: tests
+  build:
     name: Build and Publish
+    needs: tests
     runs-on: ubuntu-latest
 
     steps:
@@ -49,7 +50,8 @@ jobs:
         run: mvn -B package -DskipTests --file pom.xml
 
       # Copy the JAR file to staging directory
-      - run: mkdir staging && cp target/*.jar staging
+      - name: Copy JAR to staging
+        run: mkdir staging && cp target/*.jar staging
 
       # Login to Docker Hub
       - name: Login to Docker Hub
