--- a/.github/workflows/ci-test-and-build.yml
+++ b/.github/workflows/ci-test-and-build.yml
@@ -14,6 +14,21 @@ jobs:
     name: Unit Tests
     runs-on: ubuntu-latest
 
+    services:
+      postgres:
+        image: postgres:13
+        ports:
+          - 5432:5432
+        env:
+          POSTGRES_DB: viatabdb
+          POSTGRES_USER: postgres
+          POSTGRES_PASSWORD: postgrespw
+        options: >-
+          --health-cmd="pg_isready -U postgres"
+          --health-interval=10s
+          --health-timeout=5s
+          --health-retries=5
+
     steps:
       - uses: actions/checkout@v4
 
@@ -22,6 +37,14 @@ jobs:
         with:
           distribution: 'temurin'
           java-version: '21'
+
+      - name: Wait for Postgres to be ready
+        run: |
+          for i in {1..10}; do
+            pg_isready -h localhost -U postgres && break
+            echo "Waiting for Postgres..."
+            sleep 1
+          done
 
       - name: Run Tests
         run: mvn -B test
